examples/diagnostics/expected/1117-diagnostics-value-const-as-type-rejected.stderr
error: unknown type 'NotAType'
  --> examples/diagnostics/1117-diagnostics-value-const-as-type-rejected.sx:15:8
   |
15 |     v: NotAType = ---;
   |        ^^^^^^^^
